--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,17 @@
 # Base Index
 set -g base-index 1
+
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+
 set -g default-terminal "screen-256color"
 set -g status-keys vi
 set -g history-limit 10000
+
 setw -g mode-keys vi
 setw -g monitor-activity on
+
 # disable mouse control by default - change 'off' to 'on' to enable by default.
 setw -g mode-mouse off
 set-option -g mouse-resize-pane off
@@ -38,35 +42,43 @@ bind - \
     last-window \;\
     swap-pane -s tmux-zoom.0 \;\
     kill-window -t tmux-zoom
+
 # Split without promp
 bind-key v split-window -h
 bind-key s split-window -v
+
 # Resive Panes
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
+
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
 bind-key M-h resize-pane -L
 bind-key M-l resize-pane -R
+
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+
 # No delay for escape key press
 set -sg escape-time 0
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
 # THEME
 set -g status-fg white
-set -g status-bg colour234
+set -g status-bg colour233
 set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
+set -g pane-border-fg colour57
 set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
@@ -75,4 +87,4 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 70
 set -g status-left '#[fg=colour39](#S) #(whoami) #[fg=colour17]|'
-set -g status-right '#[fg=colour39]Users: #(users | wc -l) #[fg=white]#[fg=colour17]| #[fg=colour39]IP: #(hostname -I)#[fg=colour17]| #[fg=white]#(date +"%a") %d %b %R '
+set -g status-right '#[fg=colour57]Users: #(users | wc -l) #[fg=colour17]| #[fg=white]Mem: #(free | grep Mem | awk \"{print \\$3/\\$2 * 100}\")% #[fg=colour17]| #[fg=colour57]IP: #(hostname -I)#[fg=colour17] | '
