--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ set-option -g set-titles on
 set -g default-terminal "screen-256color"
 set -g status-keys vi
 set -g history-limit 10000
+set -g default-command $SHELL
 
 setw -g mode-keys vi
 setw -g monitor-activity on
