--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,6 +16,13 @@ set $inactive-text-color #80699f
 # red one used for the "urgent" windows
 set $urgent-bg-color     #FFFFFF
 
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #452c54
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #452c54
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #452c54
+client.urgent           $urgent-bg-color    $text-color        $bg-color            #452c54
+
 # window configurations
 new_window pixel 4
 new_float pixel 4
