--- a/.config/i3/config
+++ b/.config/i3/config
@@ -124,6 +124,15 @@ bindsym $mod+r mode "resize"
 bar {
 	# Using lemonbar, see lemonbar.sh
 	position top	
+
+    	colors {
+        	background $bg-color
+        	separator #80699f
+        	#                  border             background         text
+        	focused_workspace  $bg-color          $bg-color          $text-color
+        	inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+        	urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+    	}
 }
 
 exec feh --bg-scale ~/.img/wp.png
