--- a/.config/i3/config
+++ b/.config/i3/config
@@ -156,3 +156,4 @@ exec_always feh --bg-scale ~/.img/wp.png
 
 bindsym Print exec gnome-screenshot
 bindsym $mod+Print exec gnome-screenshot -a
+bindsym $mod+x exec bash ~/.config/i3/scripts/lock.sh
