--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -28,11 +28,6 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
-# DROPBOX
-[dropbox]
-command=$HOME/scripts/dropbox.sh
-interval=5
-
 [github]
 command=/home/r3bl/.i3/github.sh
 interval=5
@@ -43,22 +38,17 @@ command=/home/r3bl/.i3/wifi.sh
 interval=5
 separator=true
 
-#[bandwidth]
-#interval=5
-
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-
-
 [volume]
-command=/home/r3bl/.i3/volume.sh
+command=~/.config/.i3/scripts/volume.sh
 interval=1
 
 [battery]
-command=/home/r3bl/.i3/battery.sh
+command=~/.config/i3/scripts/battery.sh
 interval=5
 
 # Date Time
@@ -67,18 +57,17 @@ interval=5
 command=date '+   %d. %B   %H:%M'
 interval=5
 
-# TEMPORARILY NOT WORKING
+[lock]
+full_text=
+command=~/.config/i3/scripts/lock.sh
 
-# [reload]
-# full_text=
-# command=/usr/bin/reboot
-# separator=false
+[reload]
+full_text=
+command=/usr/bin/reboot
+separator=false
 
-# [poweroff]
-# full_text=
-# command=/usr/bin/poweroff
-# separator=false
+[poweroff]
+full_text=
+command=/usr/bin/poweroff
+separator=false
 
-# [lock]
-# full_text=
-# command=/home/r3bl/lock.sh
