adding to the bar

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -29,12 +29,12 @@ separator_block_width=15
 markup=none
 
 [github]
-command=/home/r3bl/.i3/github.sh
+command=~/.config/i3/scripts/github.sh
 interval=5
 separator=true
 
 [wifi]
-command=/home/r3bl/.i3/wifi.sh
+command=~/.config/i3/scripts/wifi.sh
 interval=5
 separator=true
 
@@ -44,7 +44,7 @@ separator=true
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=~/.config/.i3/scripts/volume.sh
+command=~/.config/i3/scripts/volume.sh
 interval=1
 
 [battery]
@@ -60,6 +60,7 @@ interval=5
 [lock]
 full_text=
 command=~/.config/i3/scripts/lock.sh
+separator=false
 
 [reload]
 full_text=
