--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,22 +1,28 @@
 [global_config]
-  title_transmit_fg_color = "#ffffff"
-  title_transmit_bg_color = "#333333"
-  title_inactive_fg_color = "#ffffff"
   title_inactive_bg_color = "#3d3d3d"
-[profiles]
-  [[default]]
-    use_theme_colors = False
-    palette = "#333333:#8c4665:#287373:#7c7c99:#395573:#5e468c:#31658c:#899ca1:#3d3d3d:#bf4d80:#53a6a6:#9e9ecb:#477ab3:#7e62b3:#6096bf:#c0c0c0"
-    foreground_color = "#ffffff"
-    background_color = "#000000"
-    cursor_color = "#ffffff"
+  title_inactive_fg_color = "#ffffff"
+  title_transmit_bg_color = "#333333"
+[keybindings]
 [layouts]
   [[default]]
     [[[child1]]]
-      type = Terminal
       parent = window0
       profile = default
+      type = Terminal
     [[[window0]]]
-      type = Window
       parent = ""
+      type = Window
 [plugins]
+[profiles]
+  [[default]]
+    background_darkness = 0.83
+    background_image = None
+    background_type = transparent
+    cursor_color = "#ffffff"
+    font = Hack 10
+    foreground_color = "#ffffff"
+    palette = "#333333:#8c4665:#287373:#7c7c99:#395573:#5e468c:#31658c:#899ca1:#3d3d3d:#bf4d80:#53a6a6:#9e9ecb:#477ab3:#7e62b3:#6096bf:#c0c0c0"
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    show_titlebar = False
+    use_system_font = False
