--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,20 +7,22 @@ font pango:hack 10
 floating_modifier $mod
 
 # colours
-set $bg-color            #17001d
-set $inactive-bg-color   #17001d
+set $bg-color            #31658C
+set $inactive-bg-color   #31658C
 # White one used for the focused window
 set $text-color          #f3f4f5
+set $client-unfocused    #929292
 # light blue one used for the unfocused indicators
-set $inactive-text-color #80699f
+set $inactive-text-color #929292
 # red one used for the "urgent" windows
 set $urgent-bg-color     #FFFFFF
 
 # window colors
 #                       border              background         text                 indicator
 client.focused          $bg-color           $bg-color          $text-color          #452c54
-client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #452c54
-client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #452c54
+client.unfocused        #client-unfocused   $client-unfocused  $inactive-text-color 
+#452c54
+client.focused_inactive #929292  $inactive-bg-color $inactive-text-color #452c54
 client.urgent           $urgent-bg-color    $text-color        $bg-color            #452c54
 
 # window configurations
