--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,6 +33,11 @@ command=~/.config/i3/scripts/github.sh
 interval=5
 separator=true
 
+[ip]
+command=~/.config/i3/scripts/ip.sh
+interval=5
+separator=true
+
 [wifi]
 command=~/.config/i3/scripts/wifi.sh
 interval=5
@@ -71,4 +76,3 @@ separator=false
 full_text=
 command=/usr/bin/poweroff
 separator=false
-
