--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,4 +160,5 @@ exec_always feh --bg-scale ~/.img/wp.png
 bindsym Print exec gnome-screenshot
 bindsym $mod+Print exec gnome-screenshot -a
 bindsym $mod+x exec bash ~/.config/i3/scripts/lock.sh
+bindsym $mod+l exec bash ~/.config/i3/scripts/lock.sh
 bindsym $mod+r exec rofi -show run -lines 5 -eh 2 -opacity "50" -bc "$highlight-color" -bg "$bg-color" -fg "$text-color" -hlfg "$highlight-color" -hlbg "$inactive-bg-color" -font "Hack 10" -hide-scrollbar
