--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,17 +48,6 @@ bind - \
 bind-key v split-window -h
 bind-key s split-window -v
 
-# Resive Panes
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
-
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -75,17 +64,31 @@ set -sg escape-time 0
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
-# THEME
-set -g status-fg white
-set -g status-bg colour233
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour57
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-right-length 70
-set -g status-left '#[fg=colour39](#S) #(whoami) #[fg=colour17]|'
-set -g status-right '#[fg=colour57]Users: #(users | wc -l) #[fg=colour17]| #[fg=white]Mem: #(free | grep Mem | awk \"{print \\$3/\\$2 * 100}\")% #[fg=colour17]| #[fg=colour57]IP: #(hostname -I)#[fg=colour17] | '
+##
+## Appearance
+##
+
+# Status bar
+set -g status-position bottom
+set -g status-interval 4
+set -g status-left ''
+set -g status-right ''
+set -g status-justify centre # center align window list
+
+setw -g status-bg default
+setw -g window-status-current-bg default
+setw -g window-status-current-fg default
+setw -g window-status-bg default
+setw -g window-status-fg white
+setw -g window-status-format '#[bg=black]#[fg=black,bold] #I #[bg=default] #[fg=black]#W  '
+setw -g window-status-current-format '#[fg=white]#[bg=cyan] #I #[fg=cyan]#[bg=default] #W  '
+
+# Panel borders
+set -g pane-active-border-fg cyan
+set -g pane-active-border-bg default
+set -g pane-border-fg black
+set -g pane-border-bg default
+
+# Message text
+set-option -g message-bg default
+set-option -g message-fg default
